kubernetes/apps/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    toolkit.fluxcd.io/tenant: dev-team
